[gd_scene load_steps=4 format=2]

[ext_resource path="res://project/contexts/game_context/game_context.gd" type="Script" id=1]
[ext_resource path="res://project/contexts/game_context/game_context_ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://project/contexts/game_context/game_context_world.tscn" type="PackedScene" id=3]

[node name="GameContext" type="Node"]
script = ExtResource( 1 )

[node name="WorldRoot" type="Node2D" parent="."]

[node name="GameContextWorld" parent="WorldRoot" instance=ExtResource( 3 )]

[node name="UIRoot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameContextUI" parent="UIRoot" instance=ExtResource( 2 )]
